# codex-reflex

./: .gitignore  .mcp.json  Cargo.toml  README.md
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.githooks/: pre-commit
docs/: ARCHITECTURE.md  DEMOS.md  GOAL.md  PRIVACY.md  SPEC.md  STYLE.md
examples/explicit-repair-registration-demo/: README.md
examples/package-manager-demo/: README.md
examples/secrets-redaction-demo/: README.md
examples/wrong-cwd-demo/: README.md
hooks/: hooks.json
migrations/: 001_init.sql
scripts/: build-prebuilt-binaries.sh  local-release-gate.sh  validate-plugin-install.sh
skills/reflex/: SKILL.md
src/: cli.rs  domain.rs  hooks.rs  lib.rs  mcp.rs  privacy.rs  retrieval.rs  storage.rs  time.rs
tests/: reflex_demos.rs
tests/conformance/: reflex_demos.rs
